@@ -2,6 +2,8 @@
 
  * configure.in, Makefile.am:
    Install documentation files into the geany-plugins doc dir.
+ * src/Makefile.am, src/scplugin.c:
+   Implement plugin_help() to open the Readme file in Geany.
 
 
 2009-01-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
